<resources>
    <string name="app_name">GoogleMapsAndroid</string>
    <string name="title_activity_maps">Map1</string>
    <string name="title_activity_real_location">Real Location</string>

    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="open_map">Open Map</string>
    <string name="last_update_time">Last update time</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="componentdemo">ComponentDemo</string>

</resources>
